<resources>
    <string name="app_name">AndroidChat</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="display_name">Nickname</string>
    <string name="register_instead">Register instead</string>
    <string name="log_in_instead">Log in instead</string>
    <string name="log_out">Log out</string>
    <string name="view_members">View members</string>
    <string name="add_member">Add member</string>
    <string name="message">Message</string>
    <string name="group_members">Group Members</string>
    <string name="create_group">Create group</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>